# OS-Project

./: .gitignore  CMakeLists.txt  README.md  install.sh
include/files/: files.h
src/: CMakeLists.txt  main.c
src/files/: CMakeLists.txt  files.c
src/scripts/: dir-file.sh  score.sh
